fix page overflow

--- a/src/leonardo/ui/views/scenarios/states-list/state-detail/states-detail.less
+++ b/src/leonardo/ui/views/scenarios/states-list/state-detail/states-detail.less
@@ -1,5 +1,5 @@
 .leonardo-state-detail {
-  position: absolute;
+  position: fixed;
   transition: right 200ms ease-out;
   top: 0;
   bottom: 0;
